--- a/assets/css/components/figure.css
+++ b/assets/css/components/figure.css
@@ -1,7 +1,6 @@
 .Figure {
   margin-top: 20px;
   margin-bottom: 80px;
-  padding: 0 1.77rem;
 
   & img {
     width: 100%;
